Fix fluid float on mobile

--- a/web/static/css/layout.css
+++ b/web/static/css/layout.css
@@ -190,7 +190,7 @@ input.submit {
     .row-fluid .fluid {
         float: left;
         margin-left: 12px;
-        width: 48%;
+        width: 47%;
     }
 
     .row-fluid .fluid.earlier,
